# pythonproject44

./: .coverage  .gitignore  README.md  config.py  file_processor.py  main.py  masks.py  pandasnscv.py  pyproject.toml  requirements.txt  utils.py
app/: generate.py  handlers.py  keyboards.py
data/: transactions_excel.xlsx
src/: data.json  decorators.py  decorators2.py  external_api.py  fixtureslesson.py  generators.py  json_lesson.py  main.py  main141.py  masks.py  masks2.py  mylog.txt  oop_homework.py  processing.py  reading_transactions.py  session  transactions_excel.xlsx  utils.py  utils2.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_processor.py  test_fixtureslesson.py  test_generators.py  test_masks.py  test_oop.py  test_processing.py  test_utils.py  test_widget.py
