[project]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = [
    {name = "Bronnikova.S",email = "bronnikovasofa03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"



[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^6.0.0"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
